refactor spring security